--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.7.1
 Pillow==2.6.1
 South==1.0.2
 beautifulsoup4==4.3.2
+dj-database-url==0.3.0
 django-andablog==1.2.2
 django-markitup==2.2.2
 django-model-utils==2.2
